test/zinc_source/compile_errors/metadata/03_line_wrong_arity.zn
// expected-error: line\(\) does not accept arguments

fn main() {
    print(line(1))
}
